# vkrm

./: CMakeLists.txt  README.md  cylinder.txt
EllipseRecognizeLibrary/: CMakeLists.txt
EllipseRecognizeLibrary/inc/: colorFilter.h  contous.h  detectEllipse.h  edgeDetection.h  findBall.h  videoRecognize.h
EllipseRecognizeLibrary/src/: colorFilter.cpp  detectEllipse.cpp  edgeDetection.cpp  findBall.cpp  findBall_old.cpp  main.cpp  videoRecognize.cpp
Experiment1/:  ellipse_centers
Experiment1/video1/: Basler_acA1300-200uc__21849964__20241127_192532894_0000.tiff  Basler_acA1300-200uc__21849964__20241127_192532894_0011.tiff  Basler_acA1300-200uc__21849964__20241127_192532894_0014.tiff  Basler_acA1300-200uc__21849964__20241127_192532894_0017.tiff  Basler_acA1300-200uc__21849964__20241127_192532894_0018.tiff  Image_13.tiff  Image_17.tiff  Image_2.tiff  Image_3.tiff  Image_6.tiff  ellipse_centers_video_1.txt
Experiment1/video2/: Basler_acA1300-200uc__21849964__20241127_192643584_0000.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0001.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0002.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0003.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0004.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0005.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0006.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0007.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0008.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0009.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0010.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0011.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0012.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0013.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0014.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0015.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0016.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0017.tiff  Basler_acA1300-200uc__21849964__20241127_192643584_0018.tiff  (+34 more)
Experiment_synthetic_2/: ball_center.txt  ball_position.txt  camera_data.txt  code.txt
TestsEllipseRecognizeLibrary/: CMakeLists.txt  testCommon.cpp  testCommon.h  testDetectEdge.cpp  testDetectEllipse.cpp  testFindBall.cpp  testsColorFilter.cpp
inc/: colorFilter.h  edgeDetection.h
src/: colorFilter.cpp  contous.cpp  edgeDetection.cpp  main.cpp
videos/: video_2.MOV  video_3.MOV
(+129 files in other folders)
